--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.10.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1"
