Fix CORS issues for deployment - Updated server CORS configuration to use environment variables - Fixed client API calls to use configured axios instance - Added comprehensive deployment guide - Updated environment example with CORS configuration

--- a/env.example
+++ b/env.example
@@ -24,7 +24,9 @@ SESSION_SECRET=bakery-secret-key
 SESSION_MAX_AGE=86400000
 
 # CORS Configuration
+# Comma-separated list of allowed origins for CORS
 CORS_ORIGIN=http://localhost:8080
+CORS_ORIGINS=http://localhost:8080,http://localhost:3000,https://your-deployed-client-domain.com
 
 # Environment
 NODE_ENV=development 
